--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="text/html; charset=utf-8" />
-    <title>Carnivale</title>
+    <title>Pardi Gras</title>
   </head>
   <body>
     <div id="app">
