--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link rel="icon" href="https://i.ibb.co/B6bJ359/1699386580-trimmy-sweeticon-removebg-preview-1.png" /> -->
+    <link rel="icon" href='../img/favicon_pg.png' />
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="text/html; charset=utf-8" />
