--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="icon" href='../img/favicon_pg.png' />
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="text/html; charset=utf-8" />
     <title>Pardi Gras</title>
